--- a/trunk/MaxisGetIt/res/values-ms/strings.xml
+++ b/trunk/MaxisGetIt/res/values-ms/strings.xml
@@ -236,7 +236,7 @@
     <string name="acc_my_classified">My Classifieds</string>
     <string name="acc_my_deals">My Deals</string>
     <string name="acc_my_alerts">My Alerts</string>
-    <string name="acc_my_fav">My Favourite</string>
+    <string name="acc_my_fav">My Favourite(s)</string>
     <string name="acc_my_best_price">My Best Price Leads / Quotes</string>
     <string name="domain_prefix">http://www.</string>
     <string name="findit_com">findit.com</string>
