--- a/trunk/MaxisGetIt/res/values/strings.xml
+++ b/trunk/MaxisGetIt/res/values/strings.xml
@@ -23,7 +23,8 @@
     <string name="modify_to_filter">Modify the search to get filtered list</string>
     <string name="category_list_not_found">Insufficient information to process your request</string>
     <string name="record_found"><u>Records Found Near You</u></string>
-    <string name = "category_deals">Featured Deals Category</string>
+     <string name="deal_found"><u>Deal(s) Found Near You</u></string>
+    <string name="category_deals">Featured Deals Category</string>
     <string name="cl_hot_deals">Hot Deals</string>
     <string name="cl_view_on_map">View on Map</string>
     <string name="cl_modify_search">Modify Search</string>
@@ -365,5 +366,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_mydeals_activity1">MydealsActivity1</string>
+    <string name="title_activity_deal_detail">DealDetailActivity</string>
+    <string name="title_activity_deal_form">DealForm</string>
 
 </resources>
