QA build 3.0.22.0 and hot deals in company Listing functionality

--- a/MaxisGetIt/res/values-ms/strings.xml
+++ b/MaxisGetIt/res/values-ms/strings.xml
@@ -23,6 +23,7 @@
     <string name="modify_to_filter">Modify the search to get filtered list</string>
     <string name="category_list_not_found">Insufficient information to process your request</string>
     <string name="record_found"><u>Records Found Near You</u></string>
+      <string name="deal_found"><u>Deal(s) Found Near You</u></string>
     <string name="cl_hot_deals">Hot Deals</string>
     <string name="cl_view_on_map">View on Map</string>
     <string name="cl_modify_search">Modify Search</string>
