--- a/trunk/MaxisGetIt/res/values-ms/strings.xml
+++ b/trunk/MaxisGetIt/res/values-ms/strings.xml
@@ -75,7 +75,7 @@
     <string name="entire_malaysia">Entire Malaysia</string>
     <string name="selective_cities">Selective Cities</string>
     <string name="city">City</string>
-	<string name="locality">Locality</string>
+	<string name="locality">Outlet(s)</string>
     <string name="type_of_deal">Type Of Deal</string>
     <string name="informative">Informative</string>
     <string name="voucher">Voucher</string>
@@ -206,7 +206,7 @@
     <string name="terms_checkbox_text">I have read and agree to the terms &amp; conditions</string>
     <string name="upgrade_to_prem">Upgrade to premium</string>
     <string name="under_implement">Under Implementation</string>
-    <string name="valid_till">Valid till :</string>
+    <string name="valid_till">Valid Till :</string>
     <string name="verified"><u>Verified</u></string>
     <string name="view_lead_underline"><u>View Leads</u></string>
     <string name="voucher_redeem_date">Voucher Redemption Date</string>
