--- a/trunk/MaxisGetIt/res/values-ms/strings.xml
+++ b/trunk/MaxisGetIt/res/values-ms/strings.xml
@@ -347,10 +347,26 @@
     <string name="txtv_image_uploaded_successfully">Your Image is successfully uploaded.</string>
     <string name="txtv_thanks_for_taking_part">Thank you for taking part in the FINDIT contest.</string>
 
-    <!-- Contest Custom dialog text -->
+     <!-- Contest Custom dialog text -->
     <string name="dialog_btn_ok">Allow</string>
     <string name="dialog_btn_no">Deny</string>
 
+     <!-- Contest AddNewPOI activity -->
+    <string name="anp_header">Add New POI</string>
+    <string name="add_new_poi">+ Add New POI</string>
+    <string name="txtv_anp_header">Fill in the following details to add a new POI</string>
+    <string name="dialog_anp_confirmation">No matching records found. Do you wish to add new POI in the list ?</string>
+    <string name="txtv_anp_company_detail">Company Detail</string>
+    <string name="txtv_anp_company_name">Company Name</string>
+    <string name="txtv_anp_company_address">Company Address</string>
+    <string name="txtv_anp_business_type">Business Type</string>
+    <string name="txtv_anp_company_number">Contact Number</string>
+    <string name="txtv_anp_user_detail">Your Detail</string>
+    <string name="txtv_anp_user_name">Name</string>
+    <string name="txtv_anp_user_number">Contact Number</string>
+    <string name="submit_poi_btn_txt">Submit</string>
+    <string name="txtv_anp_hint">Enter here</string>
+    
     <!-- Forget Password Activity -->
     <string name="fp_title">Forgot Password</string>
     <string name="fp_sub_title">Reset Your Password</string>
