--- a/MaxisGetIt/res/values-ms/strings.xml
+++ b/MaxisGetIt/res/values-ms/strings.xml
@@ -352,19 +352,19 @@
     <string name="dialog_btn_ok">Allow</string>
     <string name="dialog_btn_no">Deny</string>
 
-     <!-- Contest AddNewPOI activity -->
+    <!-- Contest AddNewPOI activity -->
     <string name="anp_header">Add New POI</string>
     <string name="add_new_poi">+ Add New POI</string>
     <string name="txtv_anp_header">Fill in the following details to add a new POI</string>
-    <string name="dialog_anp_confirmation">No matching records found. Do you wish to add new POI in the list ?</string>
+    <string name="dialog_anp_confirmation">No matching records found. Do you wish to add new POI in the list?</string>
     <string name="txtv_anp_company_detail">Company Details</string>
-    <string name="txtv_anp_company_name">Company Name</string>
-    <string name="txtv_anp_company_address">Company Address</string>
-    <string name="txtv_anp_business_type">Business Type</string>
-    <string name="txtv_anp_company_number">Contact Number</string>
+    <string name="txtv_anp_company_name">Company Name:</string>
+    <string name="txtv_anp_company_address">Company Address:</string>
+    <string name="txtv_anp_business_type">Business Type:</string>
+    <string name="txtv_anp_company_number">Contact Number:</string>
     <string name="txtv_anp_user_detail">Your Details</string>
-    <string name="txtv_anp_user_name">Name</string>
-    <string name="txtv_anp_user_number">Contact Number</string>
+    <string name="txtv_anp_user_name">Name:</string>
+    <string name="txtv_anp_user_number">Contact Number:</string>
     <string name="submit_poi_btn_txt">Submit</string>
     <string name="txtv_anp_hint">Enter here</string>
     
