--- a/MaxisGetIt/res/values-ms/strings.xml
+++ b/MaxisGetIt/res/values-ms/strings.xml
@@ -22,7 +22,7 @@
     <!-- Combined listing activity -->
     <string name="modify_to_filter">Modify the search to get filtered list</string>
     <string name="category_list_not_found">Insufficient information to process your request</string>
-    <string name="record_found"><u>Records Found Near You</u></string>
+    <string name="record_found"><u>Record(s) Found Near You</u></string>
       <string name="deal_found"><u>Deal(s) Found Near You</u></string>
     <string name="cl_hot_deals">Hot Deals</string>
     <string name="cl_view_on_map">View on Map</string>
@@ -379,4 +379,6 @@
 
     <!-- SaleTemplateType Activity -->
     <string name="add_type">"Please select an Ad Type."</string>
+    
+    <string name = "entire_malaysia">Entire Malaysia</string>
 </resources>
