--- a/MaxisGetIt/res/values-ms/strings.xml
+++ b/MaxisGetIt/res/values-ms/strings.xml
@@ -23,13 +23,12 @@
     <string name="modify_to_filter">Modify the search to get filtered list</string>
     <string name="category_list_not_found">Insufficient information to process your request</string>
     <string name="record_found"><u>Record(s) Found Near You</u></string>
-      <string name="deal_found"><u>Deal(s) Found Near You</u></string>
+    <string name="deal_found"><u>Deal(s) Found Near You</u></string>
        <string name="outlet_found">Outlet(s) Found Near You</string>
     <string name="cl_hot_deals">Hot Deals</string>
     <string name="cl_view_on_map">View on Map</string>
     <string name="cl_modify_search">Modify Search</string>
     <string name="cl_filter_by">Filter By</string>
-    
     <string name="download_deal">The detail of this Deal has been sent to your phone number via a SMS.</string>
 
     <!-- Edit profile Activity -->
@@ -66,43 +65,43 @@
     <string name="fav_companies__no_found"><u>No listing added as your favourite.</u></string>
     <string name="fav_companies_remove_confirmation">Do you wish to remove this company from your favourite list?</string>
     <string name="fav_companies_plz_select">Please make a selection first.</string>
-    <string name="company_add_to_fav">The selected companies have been added from your favourite list.</string>
-    <string name="company_remove_from_fav">The selected companies have been removed from your favourite list.</string>
+    <string name="company_add_to_fav">Company added as your favourite.</string>
+    <string name="company_remove_from_fav">Company removed from your favourite list.</string>
     <string name="confirm_btn">Confirm</string>
     <string name="cancel_btn">Cancel</string>
-    
- <!-- Deal Post activity -->
+
+    <!-- Deal Post activity -->
 
     <string name="post_deal">Post a Deal</string>
     <string name="deal_applicable_in">Applicable In</string>
     <string name="entire_malaysia">Entire Malaysia</string>
     <string name="selective_cities">Selective Cities</string>
     <string name="city">City(s)</string>
-	<string name="locality">Outlet(s)</string>
+    <string name="locality">Outlet(s)</string>
     <string name="type_of_deal">Type Of Deal</string>
     <string name="informative">Informative</string>
     <string name="voucher">Voucher</string>
-	<string name="start_date">Start Date</string>
+    <string name="start_date">Start Date</string>
     <string name="end_date">End Date</string>
     <string name="specific_count">Specific Count</string>
     <string name="unlimited_codes">Unlimited Codes</string>
     <string name="count">Count</string>
     <string name="voucher_type">Voucher Type</string>
-	<string name="single_code">Single Code</string>
-	<string name="system_generated">System Generated</string>
-	<string name="provided_by_sme">Provided By SME</string>    
-	<string name="voucher_code">Voucher Code</string>
-	<string name="provided_by_sme_email_alert">An email containing the voucher code file uploading details will be sent to you.</string>    
-	<string name="cover_image">Cover Image</string>
-	<string name="close_cover_image">Close Cover Image</string>
-	<string name="first_image">First Image</string>
-	<string name="close_first_image">Close First Image</string>
+    <string name="single_code">Single Code</string>
+    <string name="system_generated">System Generated</string>
+    <string name="provided_by_sme">Provided By SME</string>
+    <string name="voucher_code">Voucher Code</string>
+    <string name="provided_by_sme_email_alert">An email containing the voucher code file uploading details will be sent to you.</string>
+    <string name="cover_image">Cover Image</string>
+    <string name="close_cover_image">Close Cover Image</string>
+    <string name="first_image">First Image</string>
+    <string name="close_first_image">Close First Image</string>
     <string name="second_image">Second Image</string>
-	<string name="close_second_image">Close Second Image</string>
-	<string name="third_image">Third Image</string>
-	<string name="close_third_image">Close Third Image</string>
-	<string name="remove_image_confirmation">Do you wish to remove this image from your deal?</string>
-    
+    <string name="close_second_image">Close Second Image</string>
+    <string name="third_image">Third Image</string>
+    <string name="close_third_image">Close Third Image</string>
+    <string name="remove_image_confirmation">Do you wish to remove this image from your deal?</string>
+
     <!-- messages -->
     <string name="type_colon">Type :</string>
     <string name="active">Active</string>
@@ -125,8 +124,6 @@
     <string name="classifieds">Classifieds</string>
     <string name="colon">:</string>
     <string name="contact_unavailable">Contact Number is not available.</string>
-    <string name="company_add_to_fav">The Company has been successfully added to your Favourite List.</string>
-    <string name="company_remove_from_fav">The Company has been successfully removed from your Favourite List.</string>
     <string name="contact_detail">Contact Details</string>
     <string name="contact">TEL</string>
     <string name="contact_channels">Contact Channels</string>
@@ -199,7 +196,7 @@
     <string name="repost_underline"><u>Repost</u></string>
     <string name="req_to_remove_under"><u>Request to remove listing</u></string>
     <string name="search_query">Search Hotels, Restaurants, Malls etc.</string>
-     <string name="search_query_city">Search City</string>
+    <string name="search_query_city">Search City</string>
     <string name="search">Search</string>
     <string name="save">Save</string>
     <string name="submit">Submit</string>
@@ -250,8 +247,7 @@
     <string name="send_sms">Send Sms</string>
     <string name="terms_condition_text"><p>Terms of Use</p><p>The term Finder333 is used through this entire Terms of Use document to refer to the website, its owners and the employees and associates of the owners. </p><p>Please go through the Terms of Use set out below carefully before registering with or accessing Finder333. </p><p>By accessing Finder333 or any of its associate/group sites, you shall be considered (as a matter of law) to have read, understood and accepted the Terms of Use, which shall then legally constitute a binding contract between you and Finder333. You shall be bound by all the terms and condition set out herein and shall be subject to all disclaimers of liability. <br />These Terms of Use are also called the &quot;USER AGREEMENT&quot;. </p><p>1.REGISTRATION</p><p>By registering, you certify that all information you provide for the purpose of registration or in connection with the availing of any services post-registration, now or in the future, is accurate. Finder333 reserves the right, in its sole discretion, to deny you access to this website or any portion thereof without notice for the following reasons: <br />(a) Any unauthorized access or use by you. <br />(b) If you assign or transfer (or attempt the same) any right granted to you under this Agreement. <br />(c) If you violate any of the other terms and conditions of this User Agreement. </p><p>2. LICENSE: </p><p>Finder333 hereby grants you a limited, non-exclusive, non-assignable and non-transferable license to access the website and expressly conditioned upon your agreement that all such access and use shall be governed by all of the terms and conditions set forth in this USER AGREEMENT. </p><p>3. COPYRIGHT &amp; NO RETRANSMISSION OF INFORMATION: </p><p>The design, artwork, write-ups, images, names, marks, logos and other information and materials (&quot;Proprietary Information&quot;) contained in this website are the valuable and exclusive property of Finder333, and nothing in this Terms of Use shall be interpreted as transferring or assigning any such ownership rights to you or any other person or entity. <br />You may not resell, redistribute, broadcast or transfer (&quot;Proprietary Information&quot;), software and applications or use the (&quot;Proprietary Information&quot;), software and applications provided by Finder333 in any manner including as a searchable, machine-readable database unless separately and specifically authorized in writing by Finder333 prior to such use. You may not rent, lease, sublicense, distribute, transfer, copy, reproduce, publicly display, publish, adapt, store or time-share Finder333, any part thereof, or any Proprietary Information or any of the software, application or information received or accessed therefrom to or through any other person or entity unless separately and specifically authorized in writing by Finder333 prior to such use. In addition, you may not remove, alter or obscure any copyright, legal or proprietary notices in or on any portions of Finder333 without prior written authorization. Except as set forth herein, any other use of the Proprietary Information, software or application contained in this site requires the prior written consent of Connect Market Data Pvt. Ltd (an enterprise of Getit Transnational Pvt. Ltd) and may require a separate fee. </p><p>4. DELAYS IN SERVICES: <br />Finder333 (including its and their directors, employees, affiliates, agents, representatives or subcontractors) shall not be liable for any loss or liability resulting, directly or indirectly, from delays or interruptions due to any reason including electronic or mechanical equipment failures, telephone interconnect problems, defects, weather, strikes, walkouts, fire, acts of God, riots, armed conflicts, acts of war, or other like causes, viruses, hacking, denial of service attacks. Finder333 shall have no responsibility to provide you access to Finder333 while interruption of Finder333 is due to any such cause shall continue. </p><p>5. LIABILITY DISCLAIMER:</p><p>You expressly agree that use of the website is at your sole risk. Connect Market Data Pvt. Ltd (a subsidiary of Getit Infoservices Pvt. Ltd) has taken due care and caution in compilation of data for its website. However, the company does not guarantee the accuracy, adequacy or completeness of any information and is not responsible for any errors or omissions or for the results obtained from the use of such information. </p><p>The content, information, software, products, features and services published on this website may include inaccuracies or typographical errors. Changes and corrections are periodically added to the content herein. Finder333 and/or its respective suppliers may make improvements and/or changes in this website at any time. This website may be temporarily unavailable from time to time due to required maintenance, telecommunications interruptions, or other disruptions. Finder333 (and its owners, suppliers, consultants, advertisers, affiliates, partners, employees or any other associated entities, all collectively referred to as associated entities hereafter) shall not be liable to user or member or any third party. Finder333 reserves its right to modify or discontinue any or all of the contents, information, software, products, features and services published on this website. <br />In any event, Finder333 and/or its associated entities will not be liable for any direct, indirect, punitive, incidental, special or consequential damages arising out of or in any way connected with the use of this website or with the delay or inability to use this website, or for any content, information, software, products, features and services obtained through this website, or otherwise arising out of the use of this website, whether based on contract, tort, strict liability or otherwise, even if Finder333 or any of its associated entities has been advised of the possibility of damages. </p><p>6. USE OF MESSAGE BOARDS, CHAT ROOMS AND OTHER COMMUNICATION FORUMS: <br />This Website may contain message/bulletin boards, testimonials, chat rooms, or other message or communication facilities (collectively &quot;Forums&quot;). You agree to use the Forums only to send and receive messages and material that are proper and related to the particular Forum. You agree that when using a Forum, you shall not do any of the following: <br />* Defame, abuse, harass, stalk, threaten or otherwise violate the legal rights (such as rights of privacy and publicity) of others.<br />* Publish, post, distribute or disseminate any defamatory, infringing, obscene, indecent or unlawful material or information. <br />* Upload files that contain software or other material protected by intellectual property laws (or by rights of privacy of publicity) unless you own or control the rights thereto or have received all necessary consent.<br />* Upload files that contain viruses, corrupted files, or any other similar software or programs that may damage the operation of others computer.<br />* Conduct or forward surveys, contests, or chain letters. <br />* Download any file posted by another user of a Forum that you know, or reasonably should know, cannot be legally distributed in such manner. <br />* All Forums are public and not private communications. Chats, postings, conferences, and other communications by other users are not endorsed by Finder333, and such communications shall not be considered reviewed, screened, or approved by Finder333. Finder333 reserves the right for any reason to remove without notice any content of the Forums received from users, including without limitation message board postings. All content posted by you on the Forums shall be deemed to be in the public domain, free of any proprietary rights or copyrights. Finder333 reserves the right to use, in any manner it considers fit, any content posted by you on any Forum and you shall not be entitled to raise any objection or claim any consideration for such use.<br />7. EQUIPMENT AND OPERATION: <br />You shall provide and maintain all telephone/internet and other equipment necessary to access Finder333 and the cost of any such equipment and/or telephone/internet connections or use, including any applicable taxes, shall be borne solely by you. You are responsible for operating your own equipment used to access Finder333. </p><p>8. LINKS TO THIRD PARTY SITES: <br />The links in this site will allow you to leave Finder333. The linked sites are not under the control of Finder333. Finder333 has neither reviewed, nor approved these sites and is not responsible for the content on the linked site or any acts or omissions of the persons owning, controlling, operating or using any linked site or any links contained in a linked site. The inclusion of any linked site does not imply endorsement by Finder333. Third party links to Finder333 shall be governed by a separate agreement. </p><p>9. INDEMNIFICATION: <br />You shall indemnify, defend and hold harmless Finder333 (including its and their officers, directors, employees, affiliates, group companies, agents, representatives or subcontractors) from any and all claims and losses imposed on, incurred by or asserted as a result of or related to: <br />(a) Your access and use of Finder333. <br />(b) Your non-compliance by user with the terms and conditions hereof. <br />(c) Any third party actions related to your receipt and use of the information, whether authorized or unauthorized. </p><p>Any clause declared invalid shall be deemed severable and not affect the validity or enforceability of the remainder. These terms may only be amended in writing signed by Finder333. </p><p>10. CONFLICTING TERMS: <br />If there is any conflict between this User Agreement and other documents, this User Agreement shall govern, whether such order or other documents is prior to or subsequent to this User Agreement, or is signed or acknowledged by any director, officer, employee, representative or agent of Finder333. </p><p>11. TERMINATION: <br />This User Agreement and the license rights granted hereunder shall remain in full force and effect unless terminated or canceled for any of the following reasons: <br />(a) Any unauthorized access or use by you. <br />(b) If you assign or transfer (or attempt the same) any rights granted to you under this Agreement. <br />(c) If you violate any of the other terms and conditions of this User Agreement. </p><p>Termination or cancellation of this Agreement shall not affect any right or relief to which Finder333 may be entitled, at law or in equity. Upon termination of this User Agreement, all rights granted to you will terminate and revert to Connect Market Data Pvt. Ltd (an enterprise of Getit Transnational Pvt. Ltd). Except as set forth herein, regardless of the reason for cancellation or termination of this User Agreement, the fee charged if any for access to Finder333 is non-refundable for any reason. </p><p>12. JURISDICTION: <br />The terms of this agreement are governed by Indian law. You hereby consent to the exclusive jurisdiction and venue of courts in New Delhi, India in all disputes arising out of or relating to the use of this website. Use of this website is unauthorized in any jurisdiction that does not give effect to all provisions of these terms and conditions. </p><p>13. PAYMENT: <br />We as a merchant shall be under no liability whatsoever in respect of any loss or damage arising directly or indirectly out of the decline of authorization for any Transaction, on Account of the Cardholder having exceeded the preset limit mutually agreed by us with our acquiring bank from time to time. </p><p>14. PRIVACY POLICY: <br />Personal Information submitted by you in the course of registering on the website shall be subject to the Privacy Policy, the terms of which shall be read as part of this USER AGREEMENT. <br /></p></string>
     <string name="info_text"><p>\nGetit logo is the registered trademark of Getit Infoservices Pvt Ltd in India.\n \nIn Malaysia, the services are managed by FINDIT Services Sdn Bhd (520452-V).\n\nFor sales enquiries, contact \nsales@findit.com.my \n \nFor partnership enquiries, contact partnership@getit-tn.com </p></string>
-    
-    
+
     <!-- Full Map Activity -->
     <string name="map_driving_mode">Driving</string>
     <string name="map_walking_mode">Walking</string>
@@ -325,7 +321,6 @@
     <string name="poi_middle_tga3">Try to click as much as possible and make your chances stronger to win exciting prizes.</string>
     <string name="list_by_category">List by Category</string>
     <string name="list_by_distance">List by Distance</string>
-    <string name="server_not_responding">Server not responding.</string>
     <string name="hint_search_for_pois">Search for the POI(s) near you</string>
 
     <!-- Contest Home Screen -->
@@ -351,9 +346,11 @@
     <string name="txtv_image_uploaded_successfully">Your Image is successfully uploaded.</string>
     <string name="txtv_thanks_for_taking_part">Thank you for taking part in the FINDIT contest.</string>
 
-     <!-- Contest Custom dialog text -->
+    <!-- Contest Custom dialog text -->
     <string name="dialog_btn_ok">Allow</string>
     <string name="dialog_btn_no">Deny</string>
+    <string name="dialog_from_gallery">Choose Image From Gallery</string>
+    <string name="dialog_from_camera">Capture Image From Camera</string>
 
     <!-- Contest AddNewPOI activity -->
     <string name="anp_header">Add New POI</string>
@@ -370,7 +367,7 @@
     <string name="txtv_anp_user_number">Contact Number:</string>
     <string name="submit_poi_btn_txt">Submit</string>
     <string name="txtv_anp_hint">Enter here</string>
-    
+
     <!-- Forget Password Activity -->
     <string name="fp_title">Forgot Password</string>
     <string name="fp_sub_title">Reset Your Password</string>
@@ -382,8 +379,7 @@
 
     <!-- SaleTemplateType Activity -->
     <string name="add_type">"Please select an Ad Type."</string>
-    
-    <string name = "entire_malaysia">Entire Malaysia</string>
+
     
     <string name="dashboard">Dashboard</string>
 </resources>
