Worked on Highlights, Itinerary, and Contacts tab of activities/matta/MattaPackageListActivity.java

--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/values-ms/strings.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/values-ms/strings.xml
@@ -430,5 +430,11 @@
     <string name="travel_package_image">Travel Package Image</string>
     <string name="matta_record_found">Record(s) Found</string>
     <string name="filter_search_btn_lbl">Filter Search</string>
+    <string name="call_us_btn_lbl">Call Us</string>
+    <string name="locate_us_btn_lbl">Locate Us</string>
+    <string name="itinerary_tab">Itinerary</string>
+    <string name="contacts_tab">Contacts</string>
+    <string name="highlights_tab">Highlights</string>
+    
 
 </resources>
