1. Call Logging functionality is implemented on MattaPackageDetail Screen. 2. Bug fixing for QA Build version 3.0.63.0.

--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/values/strings.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/values/strings.xml
@@ -435,7 +435,7 @@
     <string name="itinerary_tab">Itinerary</string>
     <string name="contacts_tab">Contacts</string>
     <string name="highlights_tab">Highlights</string>
-    <string name="mobile_no_not_available">Mobile number not available</string>
+    <string name="mobile_no_not_available">Mobile number not available.</string>
     
 
 </resources>
